--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "default": "./index.js"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "conventional-changelog-conventionalcommits": "^8.0.0",
-    "husky": "^9.1.7"
+    "conventional-changelog-conventionalcommits": "^8.0.0"
   }
 }
